# NES

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  libbus  libcpu  libcpu.cpp  main.cpp  memoryw.cpp  qhex.cpp
.github/workflows/: main.yml
devices/: apu.h  bus.h  cpu.h  device.h  ppu.h  ram.h  rom.h  rp2A03.h
ignora/: apu.h  ppu.h  rom.h  rp2A03.h
include/: addressing_types.h  apu.h  bus.h  cpu.h  device.h  instruction.h  memoryviewer.h  ppu.h  ppu_rp2A03.h  ram.h  rom.h  rp2A03.h
src/: bus.cpp  cpu.cpp  instruction.cpp  memoryviewer.cpp  ppu.cpp  ram.cpp
tests/: 6502_Klaus2m5_tests.cpp  CMakeLists.txt  CMakeLists.txt.in  ppu_dma_tests.cpp
tests/test_files/: README.md
